css/arkusz.css
/* ... */
body {
 	color: #191919;	
}

header p {
	text-indent: 0;
}

.navbar {
	background-color: #191919;
	margin-bottom: 0;
	/*margin-left: -20px;
	margin-right: -20px;*/
	z-index: 10;
}
.navbar a {
	/*color: #DCDCDC;*/
	color: #f7f7f7;
}
.navbar a:hover {
	color: #000;
}
.navbar-right {
	margin-right: 20px;
}

@media(max-width: 767px) {
	.navbar-right {
		margin-right: 0;
		padding-right: 0;
	}
}
.navbar-header {
	
	margin-left: 20px;
}
a#zero:hover {
	color:#DCDCDC;
}
.dropdown-menu {
	background-color: #DCDCDC;
	padding: 0;
}

.dropdown-menu .divider {
	margin: 0;
}

.dropdown-menu li a {
	font-size: 15px;
	padding: 12px 20px;
}

.dropdown-menu li:last-child a:hover {
	border-radius: 0 0 4px 4px;
}

@media (max-width: 767px) {
	.dropdown-menu li a{
		color: #DCDCDC;
	}
	.navbar-nav .open .dropdown-menu > li > a {
		padding-top: 15px;
		padding-bottom: 15px;
	}
	.dropdown-menu li:last-child a:hover {
	border-radius: 0;
	}
}

.navbar-toggle {
	background-color: #DCDCDC;
	margin-right: 20px;
}

.icon-bar {
	background-color: #000;
}

.intro {
	min-height: 780px;
	/*background: url(../img/krajobraztamiza.jpg);*/
	/*background: url(../img/luca-micheli-422053-unsplash.jpg);*/
	/*background: url(../img/alessia-caudiero-1867-unsplash.jpg);*/
	background: url(../img/simon-rae-422576-unsplash.jpg);
	/*background: url(../img/benjamin-davies-484913-unsplash.jpg);*/
	background-size: cover;
	position: relative;
	/*background-position: bottom;*/
}

.intro__buttons__container {
	padding-left: 2rem;
}

.intro__button {
	background: rgba(0,0,0,0.3);
	outline: none;
	border: 3px solid #191919;
	border: 3px solid #fff;
	display: inline-block;
	/*float: right;*/
	height: 60px;
	width: 250px;
	font-weight: bold;
	text-transform: uppercase;
	letter-spacing: 2px;
	/*color: #191919;*/
	color: #fff;
	margin: 0.8rem;
	line-height: 3;
	text-align: center;
	transition: 0.4s;
}

.intro__button:nth-of-type(2n) {
	clear: both;
}

.intro__button:hover {
	background: rgba(0,0,0,0.7);
	color: #fff;
	text-decoration: none;
}

.intro__header {
	/*font-family: "Montserrat", sans-serif;*/
	font-family: Impact, Charcoal, sans-serif;
	/*font-family: "Trebuchet MS", Helvetica, sans-serif;*/
	/*font-family: "Arial Black", Gadget, sans-serif;*/
	/*font-family: "Comic Sans MS", cursive, sans-serif;*/
	/*font-family: Georgia, serif;*/
	font-size: 5rem;
	font-weight: bold;
	color: #191919;
	width: 70%;
	padding: 7rem 2rem;
	text-align: left;
	position: relative;
	/*text-shadow: 3px 1px 0 rgba(0,0,0,0.1);*/
}

.intro__header p {
	margin-top: 2rem;
	font-size: 3.5rem;
	text-align: left;
	text-indent: 0;
}

.intro__header:before {
	content: '';
	display: block;
	width: 100px;
	height: 10px;
	border-top: 3px solid #fff;
	position: absolute;
	left: 2.1rem;
	top: 6.5rem;
}

#origins,
#overview,
#articles,
#contact {
	width: 1000px;
	margin: 4rem auto;
	max-width: 80%;
}

#overview,
#gallery {
	margin-top: 3rem;
}


.origins__heading,
.overview__heading,
.gallery__heading,
.articles__heading,
.contact__heading {
	font-size: 2rem;
	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
	font-weight: bold;
	/*font-family: Georgia, serif;*/
	padding: 2rem 1rem 3rem;
	text-align: center;
}

.gallery__heading {
	padding-bottom: 3.75rem;
}

.origins__text,
.overview__text {
	font-family: "Trebuchet MS", Helvetica, sans-serif;
}

.link_overview {
	color: #23527c;
	font-weight: bold;
	font-size: 1.1rem;
	text-align: center;
	padding: 0.4rem;
}

.link_overview:hover {
	background: rgba(65,66,84,0.1);
}

#gallery {
	padding: 0 1rem;
	width: 1200px;
	margin: 0 auto;
}

.gallery__list {
	width: 100%;
	max-width: 1198px;
	margin: 0 auto;
}

.gallery__item {
	/*width: 46%;*/
	width: 50%;
	/*margin: 0 1% 6rem;*/
	float: left;
	height: 380px;
	box-shadow: 1px 1px 10px 0 rgba(0,0,0,0.05);
	position: relative;
	transition: all 1s ease;
}



.gallery__item:nth-of-type(2n) {
	/*float: right;*/
}

.gallery__item__tile {
	width: 100%;
	/*height: 300px;*/
	height: 100%;
	display: block;	
	background-size: cover;
	background-position: center;
	transition: 0.7s;
	
}

.gallery__item:hover  .gallery__item__tile{
	transform: scale(0.99);
}
.gallery__item a {
	position: relative;
	bottom: 0;
	left: 0;
}

.gallery__item__overlay {
	position: absolute;
	top: 0;
	left: 0;
	max-width: 100%;
	max-height: 100%;
	width: 100%;
	height: 100%;
	background: rgba(0,0,0,0);
	z-index: 1;
	/*opacity: 1;*/
	transition: 0.7s;
	pointer-events: none;
}

.gallery__item:hover .gallery__item__overlay {
	background: rgba(0,0,0,0.1);
}

.gallery__item__button {
	background: rgba(0,0,0,0.3);
	outline: none;
	border: 3px solid #191919;
	border: 3px solid #fff;
	display: block;
	height: 60px;
	width: 250px;
	font-weight: bold;
	text-transform: uppercase;
	letter-spacing: 2px;
	/*color: #191919;*/
	color: #fff;
	margin: 0 auto;
	text-align: center;
	transition: 0.4s;
	position: relative;
	top: 50%;
	transform: translateY(-50%);
}

..gallery__item:hover .gallery__item__button {
	background: rgba(0,0,0,0.5);
}

a#sadburyhill{
	/*background-image: url(../img/sadburyhill.jpg);*/
	background-image: url(../img/leyton_12.jpg);
}
/*a#streatham {
  	background-image: url(../img/streatham.jpg);
}*/
a#leyton {
  	background-image: url(../img/leytongardens_7.jpg);
}
a#tamiza {
  	background-image: url(../img/towerbridge.jpg);
}
a#various {
  	background-image: url(../img/seashell.jpg);
}

.articles__item {
	display: block;
	width: 46%;
	margin: 1%;
	float: left;
	font-size: 1.5rem;
	text-align: center;
	height: 4rem;
	line-height: 2.5;

}

.articles__list:nth-of-type(2n) {
	/*float: right;*/
}

.articles__link {
	color: #191919;
	display: inline-block;
	width: 100%;
	position: relative;
}

.articles__link:after {
	content: '';
	display: block;
	width: 5rem;
	border-bottom: 3px solid rgba(0,0,0,0.8);
	position: absolute;
	left: 50%;
	transform: translateX(-50%);
}
/* ... */

